# marketing-mcp-server

./: Cargo.toml  README.md
src/: analytics.rs  appstate.rs  graphql.rs  main.rs  math.rs  mcp.rs  ms365.rs  salesforce.rs  sap.rs
