[package]
name = "marketing-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
reqwest = { version = "0.13.1", features = ["json"] }
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io"] }
rmcp-actix-web = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std", "fmt"] }
