[package]
name = "marketing-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
async-graphql = { version = "7.0.17", features = ["dynamic-schema"]}
reqwest = { version = "0.13.1", features = ["json"] }
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
rmcp-actix-web = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std", "fmt"] }
schemars = "1.2.1"
serde_core = { version = "1.0.228", features = ["alloc", "rc"] }
serde_json = "1.0.149"
tracing-actix-web = "0.7"
async-graphql-actix-web = "7.2.1"
actix-cors = "0.7.1"
graphql_client = "0.16.0"
base64 = "0.22.1"
dotenv = "0.15.0"
